<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:contentDescription="@string/copy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/right_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_right_alt_24" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="41dp" />

    <TextView
        android:id="@+id/original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/english"
        android:textColor="#1B1B1B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/french"
        android:textColor="#1B1B1B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/original_text"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:background="@drawable/textview_round_border"
        android:gravity="top"
        android:hint="@string/enter_your_english_text_here"
        android:includeFontPadding="false"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="8"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        app:textInputLayoutFocusedRectEnabled="false" />

    <TextView
        android:id="@+id/target_text"
        android:layout_width="331dp"
        android:layout_height="245dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/textview_round_border"
        android:padding="5dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="380dp"
        android:contentDescription="@string/down_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_arrow_down_24" />

    <Button
        android:id="@+id/button"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:onClick="onClickTranslate"
        android:text="@string/translate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="@string/copy_button"
        android:focusable="true"
        android:onClick="onClickCopy"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/target_text"
        app:layout_constraintEnd_toEndOf="@+id/target_text"
        app:srcCompat="@drawable/baseline_content_copy_24"
        tools:ignore="RedundantDescriptionCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>